--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,268 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
-	<h1 class="text"></h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="this is my site description" />
+        <meta name="keywords" content="8-12 words max" />
+        <title>PlayCover App</title>
+        <link href="css/styles.css" rel="stylesheet" />
+
+        <!-- fonts import -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <!-- Roboto Font -->
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+            rel="stylesheet"
+        />
+        <!-- Open Sans Font -->
+        <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
+            rel="stylesheet"
+        />
+        <!-- custom css -->
+        <style>
+            body {
+                font-family: "Open Sans", sans-serif;
+            }
+        </style>
+        <!-- importing alpine js to use x-data for creating drop down menu -->
+        <script
+            defer
+            src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"
+        ></script>
+    </head>
+
+    <!-- temp height style applied -->
+    <body class="bg-gray-100" style="height: 500px">
+        <!-- nav bar -->
+        <nav class="sticky top-0 bg-white filter drop-shadow-md">
+            <div class="max-w-screen-2xl pr-12 mx-auto pl-14">
+                <div class="flex justify-between">
+                    <!-- logo -->
+                    <div class="flex items-center">
+                        <a href="index.html" class="py-1">
+                            <img
+                                class="max-h-14"
+                                src="assets/logo.svg"
+                                alt=""
+                            />
+                        </a>
+                    </div>
+
+                    <!-- primary nav -->
+                    <div class="flex items-center space-x-10">
+                        <a
+                            href=""
+                            class="
+                                text-lg text-pink-500
+                                border-b-2 border-pink-500
+                                py-3
+                            "
+                            >Home</a
+                        >
+                        <a
+                            href=""
+                            class="
+                                text-gray-800 text-lg
+                                hover:text-pink-400
+                                transition-colors
+                                duration-150
+                            "
+                            >Download</a
+                        >
+                        <a
+                            href=""
+                            class="
+                                text-gray-800 text-lg
+                                hover:text-pink-400
+                                transition-colors
+                                duration-150
+                            "
+                            >Report Bug</a
+                        >
+                        <a
+                            href=""
+                            class="
+                                text-gray-800 text-lg
+                                hover:text-pink-400
+                                transition-colors
+                                duration-150
+                            "
+                            >FAQs</a
+                        >
+                        <a
+                            href=""
+                            class="
+                                text-gray-800 text-lg
+                                hover:text-pink-400
+                                transition-colors
+                                duration-150
+                            "
+                            >Discord</a
+                        >
+                        <a
+                            href=""
+                            class="
+                                text-gray-800 text-lg
+                                hover:text-pink-400
+                                transition-colors
+                                duration-150
+                            "
+                            >GitHub</a
+                        >
+                    </div>
+
+                    <!-- secondary nav -->
+                    <div class="flex items-center space-x-5">
+                        <!-- donate btn -->
+                        <button
+                            class="
+                                border border-gold
+                                rounded-md
+                                px-3
+                                py-1
+                                hover:border-yellow-400
+                                transition-colors
+                                duration-200
+                            "
+                        >
+                            <a
+                                href=""
+                                class="
+                                    text-lg text-gold
+                                    hover:text-yellow-400
+                                    transition-colors
+                                    duration-200
+                                "
+                                >Donate</a
+                            >
+                        </button>
+                        <!-- language btn and menu-->
+                        <ul>
+                            <li class="relative" x-data="{dropdownOpen:false}">
+                                <!-- language btn -->
+                                <button
+                                    class="
+                                        flex
+                                        items-center
+                                        space-x-2
+                                        border border-gray-600
+                                        rounded-md
+                                        px-3
+                                        py-1
+                                        transition-colors
+                                        duration-200
+                                        group
+                                        hover:border-pink-500
+                                    "
+                                    @click="dropdownOpen = !dropdownOpen"
+                                >
+                                    <span
+                                        href=""
+                                        class="
+                                            text-lg text-gray-800
+                                            transition-colors
+                                            duration-200
+                                            group-hover:text-pink-500
+                                        "
+                                        >English</span
+                                    >
+                                    <!-- icon -->
+                                    <div class="pt-1">
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            class="
+                                                h-5
+                                                w-5
+                                                transition-colors
+                                                duration-200
+                                                group-hover:text-pink-500
+                                            "
+                                            fill="none"
+                                            viewBox="0 0 24 24"
+                                            stroke="currentColor"
+                                        >
+                                            <path
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                                stroke-width="1.5"
+                                                d="M19 9l-7 7-7-7"
+                                            />
+                                        </svg>
+                                    </div>
+                                </button>
+
+                                <!-- language menu -->
+                                <div
+                                    class="
+                                        absolute
+                                        bg-white
+                                        right-0
+                                        rounded-md
+                                        text-lg
+                                        px-6
+                                        py-3
+                                    "
+                                    :class="{'hidden':!dropdownOpen, 'flex flex-col':dropdownOpen}"
+                                >
+                                    <ul class="space-y-4">
+                                        <li>
+                                            <a
+                                                href="#"
+                                                class="
+                                                    text-gray-700
+                                                    hover:text-pink-400
+                                                    transition-colors
+                                                    duration-200
+                                                "
+                                            >
+                                                Chinese
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a
+                                                href="#"
+                                                class="
+                                                    text-gray-700
+                                                    hover:text-pink-400
+                                                    transition-colors
+                                                    duration-200
+                                                "
+                                            >
+                                                Russian
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a
+                                                href="#"
+                                                class="
+                                                    text-gray-700
+                                                    hover:text-pink-400
+                                                    transition-colors
+                                                    duration-200
+                                                "
+                                            >
+                                                German
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
+        <div
+            class="bg-pink-100"
+            style="height: 600px"
+            @click="dropdownOpen = !dropdownOpen"
+        ></div>
+
+        <footer class="bg-[#d9c727] border-8 m-auto">Footer</footer>
+    </body>
 </html>
