--- a/public/index.html
+++ b/public/index.html
@@ -203,7 +203,7 @@
                                         right-0
                                         rounded-md
                                         text-lg
-                                        px-6
+                                        px-[18px]
                                         py-3
                                     "
                                     :class="{'hidden':!dropdownOpen, 'flex flex-col':dropdownOpen}"
@@ -220,7 +220,7 @@
                                                     duration-200
                                                 "
                                             >
-                                                Chinese
+                                                简体中文
                                             </a>
                                         </li>
                                         <li>
@@ -233,7 +233,7 @@
                                                     duration-200
                                                 "
                                             >
-                                                Russian
+                                                русский
                                             </a>
                                         </li>
                                         <li>
@@ -246,7 +246,33 @@
                                                     duration-200
                                                 "
                                             >
-                                                German
+                                                Deutsche
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a
+                                                href="#"
+                                                class="
+                                                    text-gray-700
+                                                    hover:text-pink-400
+                                                    transition-colors
+                                                    duration-200
+                                                "
+                                            >
+                                                français
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a
+                                                href="#"
+                                                class="
+                                                    text-gray-700
+                                                    hover:text-pink-400
+                                                    transition-colors
+                                                    duration-200
+                                                "
+                                            >
+                                                繁体中文
                                             </a>
                                         </li>
                                     </ul>
