logo updated and nav margin increased

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,12 @@
                             href="index.html"
                             class="
                                 font-logo font-extrabold
-                                text-[28px] text-pink-500
+                                text-[28px]
+                                bg-gradient-to-r
+                                from-pink-500
+                                to-purple-500
+                                text-transparent
+                                bg-clip-text
                                 pt-1
                             "
                         >
@@ -57,6 +62,7 @@
                                 text-lg text-pink-500
                                 border-b-2 border-pink-500
                                 py-3
+                                m-1
                             "
                             >Home</a
                         >
