logo href updated

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
                     <!-- logo -->
                     <div class="flex items-center">
                         <a
-                            href="index.html"
+                            href="./"
                             class="
                                 font-logo font-extrabold
                                 text-[28px]
@@ -289,5 +289,8 @@
                 </div>
             </div>
         </nav>
+        <!-- content goes here -->
+
+        <!-- footer goes here -->
     </body>
 </html>
