--- a/public/index.html
+++ b/public/index.html
@@ -320,23 +320,32 @@
 							md:text-xl
 						"
 					>
-						<a href="" class="block font-bold text-pink-500"
-							>Home</a
-						>
-						<a href="" class="block">Download</a>
-						<a href="" class="block">Update Log</a>
-						<a href="" class="block">FAQs</a>
-						<a href="" class="block">Contact Us</a>
-						<button>Language</button>
+						<a href="" class="block text-pink-500">Home</a>
+						<a href="" class="block text-gray-400">Download</a>
+						<a href="" class="block text-gray-400">Update Log</a>
+						<a href="" class="block text-gray-400">FAQs</a>
+						<a href="" class="block text-gray-400">Contact Us</a>
+						<button class="text-gray-400">Language</button>
 						<a href="" class="block text-gold">Donate</a>
 					</div>
 				</div>
 			</div>
 		</nav>
 		<!-- content goes here -->
-
+		<div class="h-[700px]"></div>
 		<!-- footer goes here -->
 
+		<footer class="bg-white">
+			<div class="flex"></div>
+			<div class="container px-6 py-4 mx-auto">
+				<hr class="h-px my-6 bg-gray-300 border-none" />
+				<div>
+					<p class="text-center text-gray-800">
+						© PlayCover 2021 - All rights reserved
+					</p>
+				</div>
+			</div>
+		</footer>
 		<!-- js -->
 		<script src="language-button.js"></script>
 		<script src="mobile-button.js"></script>
