footer content added

--- a/public/index.html
+++ b/public/index.html
@@ -331,21 +331,141 @@
 				</div>
 			</div>
 		</nav>
-		<!-- content goes here -->
-		<div class="h-[700px]"></div>
-		<!-- footer goes here -->
 
+		<!-- content -->
+		<div class="flex flex-wrap justify-center space-x-10 py-20">
+			<div>
+				<h1
+					class="
+						font-logo font-extrabold
+						text-[48px]
+						bg-gradient-to-r
+						from-pink-500
+						to-purple-500
+						text-transparent
+						bg-clip-text
+					"
+				>
+					PlayCover
+				</h1>
+				<p class="max-w-sm text-lg">
+					an app that allows you to run iOS apps & games on M1 & Intel
+					Mac with mouse, keyboard and controller support.
+				</p>
+
+				<!-- Download buttons -->
+				<div class="flex space-x-4 pt-6">
+					<a
+						class="
+							py-2
+							px-4
+							drop-shadow-md
+							bg-pink-500
+							text-white
+							hover:bg-pink-400
+							active:bg-pink-600
+							transition-colors
+							duration-400
+							rounded-md
+							cursor-pointer
+						"
+						href=""
+					>
+						Download for M1 Mac</a
+					><a
+						class="
+							py-2
+							px-4
+							drop-shadow-md
+							bg-gray-50
+							text-gray-800
+							hover:bg-white
+							active:bg-gray-100
+							transition-colors
+							duration-400
+							rounded-md
+							cursor-pointer
+						"
+						href=""
+					>
+						Download for Intel Mac
+					</a>
+				</div>
+			</div>
+
+			<div>Image</div>
+		</div>
+
+		<!-- footer goes here -->
 		<footer class="bg-white">
-			<div class="flex"></div>
-			<div class="container px-6 py-4 mx-auto">
+			<!-- above line -->
+			<div
+				class="
+					flex
+					justify-between
+					max-w-7xl
+					mx-auto
+					pt-8
+					pl-6
+					pr-10
+					flex-col
+					md:flex-row
+				"
+			>
+				<!-- text -->
+				<div class="md:pl-2">
+					<h1
+						class="
+							font-logo font-extrabold
+							text-lg
+							bg-gradient-to-r
+							from-pink-500
+							to-purple-500
+							text-transparent
+							bg-clip-text
+						"
+					>
+						PlayCover
+					</h1>
+					<p class="max-w-lg">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit.
+						Ex, temporibus! Corrupti, obcaecati. Cupiditate, dolores
+						minus nam ea possimus, harum optio facere aperiam natus
+						aut tenetur aspernatur. Provident iusto cupiditate
+						pariatur eveniet, vitae modi corporis odio excepturi
+						quasi voluptatum repellat, corrupti, eum eaque atque
+						ullam commodi temporibus. Dolore vitae illo nisi?
+					</p>
+				</div>
+				<!-- links -->
+				<div
+					class="
+						flex
+						justify-between
+						lg:flex-col
+						mt-auto
+						pt-8
+						lg:pt-0
+					"
+				>
+					<h3 class="">Links</h3>
+					<div class="flex space-x-5">
+						<a href="">Icon 1</a> <a href="">Icon 2</a>
+					</div>
+				</div>
+			</div>
+
+			<!-- below line -->
+			<div class="container px-6 pb-4 mx-auto">
 				<hr class="h-px my-6 bg-gray-300 border-none" />
 				<div>
-					<p class="text-center text-gray-800">
+					<p class="text-center text-gray-500">
 						© PlayCover 2021 - All rights reserved
 					</p>
 				</div>
 			</div>
 		</footer>
+
 		<!-- js -->
 		<script src="language-button.js"></script>
 		<script src="mobile-button.js"></script>
