--- a/public/index.html
+++ b/public/index.html
@@ -333,8 +333,20 @@
 		</nav>
 
 		<!-- content -->
-		<div class="flex flex-wrap justify-center space-x-10 py-20">
-			<div>
+		<div
+			class="
+				flex flex-col
+				items-center
+				md:items-start md:flex-row
+				justify-center
+				space-y-10
+				md:space-y-0 md:space-x-40
+				py-20
+			"
+		>
+			<!-- text -->
+			<div class="max-w-full flex flex-col items-center md:block">
+				<!-- logo -->
 				<h1
 					class="
 						font-logo font-extrabold
@@ -348,13 +360,32 @@
 				>
 					PlayCover
 				</h1>
-				<p class="max-w-sm text-lg">
+				<!-- hero text -->
+				<p
+					class="
+						max-w-sm
+						pt-6
+						md:pt-0
+						text-center
+						md:text-left
+						text-lg
+					"
+				>
 					an app that allows you to run iOS apps & games on M1 & Intel
 					Mac with mouse, keyboard and controller support.
 				</p>
 
 				<!-- Download buttons -->
-				<div class="flex space-x-4 pt-6">
+				<div
+					class="
+						flex flex-col
+						md:flex-row
+						space-y-4
+						md:space-y-0 md:space-x-4
+						pt-4
+						md:pt-6
+					"
+				>
 					<a
 						class="
 							py-2
@@ -393,7 +424,14 @@
 				</div>
 			</div>
 
-			<div>Image</div>
+			<!-- image -->
+			<div>
+				<img
+					class="max-w-xs md:max-w-sm rounded shadow"
+					src="assets/screenshot-1.jpeg"
+					alt="genshin-impact"
+				/>
+			</div>
 		</div>
 
 		<!-- footer goes here -->
