image location updated

--- a/public/index.html
+++ b/public/index.html
@@ -428,7 +428,7 @@
 			<div>
 				<img
 					class="max-w-xs md:max-w-sm rounded shadow"
-					src="assets/screenshot-1.jpeg"
+					src="./assets/screenshot-1.jpeg"
 					alt="genshin-impact"
 				/>
 			</div>
