z-index of nav fixed

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 	<!-- temp height style applied -->
 	<body class="bg-gray-100 font-body" style="height: 500px">
 		<!-- nav bar -->
-		<nav class="sticky top-0 bg-white filter drop-shadow-md">
+		<nav class="sticky top-0 bg-white filter drop-shadow-md z-50">
 			<!-- background -->
 			<div
 				class="
