--- a/public/index.html
+++ b/public/index.html
@@ -27,272 +27,323 @@
 	<!-- temp height style applied -->
 	<body class="bg-gray-100 font-body" style="height: 500px">
 		<!-- nav bar -->
-		<nav class="sticky top-0 bg-white filter drop-shadow-md z-50">
-			<!-- background -->
-			<div
-				class="
-					max-w-screen-2xl
-					px-6
-					lg:pr-12 lg:pl-14
-					mx-auto
-					py-3
-					lg:py-1
-				"
-			>
-				<div class="flex justify-between">
-					<!-- logo -->
-					<div class="flex items-center">
-						<a
-							href="./"
-							class="
-								font-logo font-extrabold
-								text-[25px]
-								lg:text-[28px]
-								bg-gradient-to-r
-								from-pink-500
-								to-purple-500
-								text-transparent
-								bg-clip-text
-							"
-						>
-							PlayCover
-						</a>
-					</div>
+		<nav
+			class="
+				max-w-screen-2xl
+				px-6
+				lg:pr-12 lg:pl-14
+				mx-auto
+				py-3
+				lg:py-1
+				fixed
+				w-screen
+				top-0
+				bg-white
+				filter
+				drop-shadow-md
+				z-20
+			"
+		>
+			<div class="flex justify-between">
+				<!-- logo -->
+				<div class="flex items-center">
+					<a
+						href="./"
+						class="
+							font-logo font-extrabold
+							text-[25px]
+							lg:text-[28px]
+							bg-gradient-to-r
+							from-pink-500
+							to-purple-500
+							text-transparent
+							bg-clip-text
+						"
+					>
+						PlayCover
+					</a>
+				</div>
 
-					<!-- primary nav -->
-					<div class="hidden lg:flex items-center space-x-10">
-						<a
-							href=""
-							class="
-								text-[17px] text-pink-500
-								border-b-2 border-pink-500
-								py-3
-							"
-							>Home</a
-						>
-						<a
-							href=""
-							class="
-								text-gray-800 text-[17px]
-								hover:text-pink-400
-								transition-colors
-								duration-150
-							"
-							>Download</a
-						>
-						<a
-							href=""
-							class="
-								text-gray-800 text-[17px]
-								hover:text-pink-400
-								transition-colors
-								duration-150
-							"
-							>Update Log</a
-						>
-						<a
-							href=""
-							class="
-								text-gray-800 text-[17px]
-								hover:text-pink-400
-								transition-colors
-								duration-150
-							"
-							>FAQs</a
-						>
-						<a
-							href=""
-							class="
-								text-gray-800 text-[17px]
-								hover:text-pink-400
-								transition-colors
-								duration-150
-							"
-							>Contact Us</a
-						>
-					</div>
+				<!-- primary nav -->
+				<div class="hidden lg:flex items-center space-x-10">
+					<a
+						href=""
+						class="
+							text-[17px] text-pink-500
+							border-b-2 border-pink-500
+							py-3
+						"
+						>Home</a
+					>
+					<a
+						href=""
+						class="
+							text-gray-800 text-[17px]
+							hover:text-pink-400
+							transition-colors
+							duration-150
+						"
+						>Download</a
+					>
+					<a
+						href=""
+						class="
+							text-gray-800 text-[17px]
+							hover:text-pink-400
+							transition-colors
+							duration-150
+						"
+						>Update Log</a
+					>
+					<a
+						href=""
+						class="
+							text-gray-800 text-[17px]
+							hover:text-pink-400
+							transition-colors
+							duration-150
+						"
+						>FAQs</a
+					>
+					<a
+						href=""
+						class="
+							text-gray-800 text-[17px]
+							hover:text-pink-400
+							transition-colors
+							duration-150
+						"
+						>Contact Us</a
+					>
+				</div>
 
-					<!-- secondary nav -->
-					<div class="hidden lg:flex items-center space-x-5">
-						<!-- donate btn -->
-						<button
+				<!-- secondary nav -->
+				<div class="hidden lg:flex items-center space-x-5">
+					<!-- donate btn -->
+					<button
+						class="
+							border border-gold
+							rounded-md
+							px-3
+							py-1
+							hover:border-gold-light
+							transition-colors
+							duration-200
+							group
+						"
+					>
+						<a
+							href=""
 							class="
-								border border-gold
-								rounded-md
-								px-3
-								py-1
-								hover:border-gold-light
+								text-[17px] text-gold
+								group-hover:text-gold-light
 								transition-colors
 								duration-200
-								group
 							"
+							>Donate</a
 						>
-							<a
-								href=""
+					</button>
+					<!-- language btn and menu-->
+					<ul>
+						<li class="relative">
+							<!-- language btn -->
+							<button
 								class="
-									text-[17px] text-gold
-									group-hover:text-gold-light
+									language-button
+									flex
+									items-center
+									space-x-2
+									border border-gray-600
+									rounded-md
+									px-3
+									py-1
 									transition-colors
 									duration-200
+									group
+									hover:border-pink-500
 								"
-								>Donate</a
 							>
-						</button>
-						<!-- language btn and menu-->
-						<ul>
-							<li class="relative">
-								<!-- language btn -->
-								<button
+								<span
+									href=""
 									class="
-										language-button
-										flex
-										items-center
-										space-x-2
-										border border-gray-600
-										rounded-md
-										px-3
-										py-1
+										text-[17px] text-gray-800
 										transition-colors
 										duration-200
-										group
-										hover:border-pink-500
+										group-hover:text-pink-500
 									"
+									>English</span
 								>
-									<span
-										href=""
+								<!-- icon -->
+								<div class="pt-1">
+									<svg
+										xmlns="http://www.w3.org/2000/svg"
 										class="
-											text-[17px] text-gray-800
+											h-5
+											w-5
 											transition-colors
 											duration-200
 											group-hover:text-pink-500
 										"
-										>English</span
+										fill="none"
+										viewBox="0 0 24 24"
+										stroke="currentColor"
 									>
-									<!-- icon -->
-									<div class="pt-1">
-										<svg
-											xmlns="http://www.w3.org/2000/svg"
+										<path
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											stroke-width="1.5"
+											d="M19 9l-7 7-7-7"
+										/>
+									</svg>
+								</div>
+							</button>
+
+							<!-- language menu -->
+							<div
+								class="
+									language-menu
+									hidden
+									absolute
+									bg-white
+									right-0
+									rounded-md
+									text-[17px]
+									px-[18px]
+									py-3
+								"
+							>
+								<ul class="space-y-4">
+									<li>
+										<a
+											href="#"
 											class="
-												h-5
-												w-5
+												text-gray-700
+												hover:text-pink-400
 												transition-colors
 												duration-200
-												group-hover:text-pink-500
 											"
-											fill="none"
-											viewBox="0 0 24 24"
-											stroke="currentColor"
 										>
-											<path
-												stroke-linecap="round"
-												stroke-linejoin="round"
-												stroke-width="1.5"
-												d="M19 9l-7 7-7-7"
-											/>
-										</svg>
-									</div>
-								</button>
+											简体中文
+										</a>
+									</li>
+									<li>
+										<a
+											href="#"
+											class="
+												text-gray-700
+												hover:text-pink-400
+												transition-colors
+												duration-200
+											"
+										>
+											русский
+										</a>
+									</li>
+									<li>
+										<a
+											href="#"
+											class="
+												text-gray-700
+												hover:text-pink-400
+												transition-colors
+												duration-200
+											"
+										>
+											Deutsche
+										</a>
+									</li>
+									<li>
+										<a
+											href="#"
+											class="
+												text-gray-700
+												hover:text-pink-400
+												transition-colors
+												duration-200
+											"
+										>
+											français
+										</a>
+									</li>
+									<li>
+										<a
+											href="#"
+											class="
+												text-gray-700
+												hover:text-pink-400
+												transition-colors
+												duration-200
+											"
+										>
+											繁体中文
+										</a>
+									</li>
+								</ul>
+							</div>
+						</li>
+					</ul>
+				</div>
 
-								<!-- language menu -->
-								<div
-									class="
-										language-menu
-										hidden
-										absolute
-										bg-white
-										right-0
-										rounded-md
-										text-[17px]
-										px-[18px]
-										py-3
-									"
-								>
-									<ul class="space-y-4">
-										<li>
-											<a
-												href="#"
-												class="
-													text-gray-700
-													hover:text-pink-400
-													transition-colors
-													duration-200
-												"
-											>
-												简体中文
-											</a>
-										</li>
-										<li>
-											<a
-												href="#"
-												class="
-													text-gray-700
-													hover:text-pink-400
-													transition-colors
-													duration-200
-												"
-											>
-												русский
-											</a>
-										</li>
-										<li>
-											<a
-												href="#"
-												class="
-													text-gray-700
-													hover:text-pink-400
-													transition-colors
-													duration-200
-												"
-											>
-												Deutsche
-											</a>
-										</li>
-										<li>
-											<a
-												href="#"
-												class="
-													text-gray-700
-													hover:text-pink-400
-													transition-colors
-													duration-200
-												"
-											>
-												français
-											</a>
-										</li>
-										<li>
-											<a
-												href="#"
-												class="
-													text-gray-700
-													hover:text-pink-400
-													transition-colors
-													duration-200
-												"
-											>
-												繁体中文
-											</a>
-										</li>
-									</ul>
-								</div>
-							</li>
-						</ul>
-					</div>
-
-					<!-- mobile button -->
-					<div class="lg:hidden flex items-center">
-						<button
-							class="
-								mobile-button
-								text-pink-600
-								active:text-pink-300
-								transition-colors
-							"
+				<!-- mobile button -->
+				<div class="lg:hidden flex items-center">
+					<button
+						class="
+							mobile-button
+							text-pink-600
+							active:text-pink-300
+							transition-colors
+						"
+					>
+						<!-- icon -->
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="h-7 w-7"
+							fill="none"
+							viewBox="0 0 24 24"
+							stroke="currentColor"
 						>
-							<!-- icon -->
+							<path
+								stroke-linecap="round"
+								stroke-linejoin="round"
+								stroke-width="2"
+								d="M4 6h16M4 12h16M4 18h16"
+							/>
+						</svg>
+					</button>
+				</div>
+			</div>
+			<!-- mobile menu -->
+			<div class="mobile-menu hidden relative">
+				<div
+					class="
+						flex flex-col
+						items-center
+						space-y-5
+						pt-5
+						pb-3
+						text-lg
+						md:text-xl
+					"
+				>
+					<a href="" class="block text-pink-500">Home</a>
+					<a href="" class="block text-gray-400">Download</a>
+					<a href="" class="block text-gray-400">Update Log</a>
+					<a href="" class="block text-gray-400">FAQs</a>
+					<a href="" class="block text-gray-400">Contact Us</a>
+
+					<button class="text-gray-400 flex items-center space-x-1">
+						<p class="pl-3">Language</p>
+						<!-- icon -->
+						<div class="pt-1">
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
-								class="h-7 w-7"
+								class="
+									h-5
+									w-5
+									transition-colors
+									duration-200
+									group-hover:text-pink-500
+								"
 								fill="none"
 								viewBox="0 0 24 24"
 								stroke="currentColor"
@@ -300,34 +351,13 @@
 								<path
 									stroke-linecap="round"
 									stroke-linejoin="round"
-									stroke-width="2"
-									d="M4 6h16M4 12h16M4 18h16"
+									stroke-width="1.5"
+									d="M19 9l-7 7-7-7"
 								/>
 							</svg>
-						</button>
-					</div>
-				</div>
-				<!-- mobile menu -->
-				<div class="mobile-menu hidden">
-					<div
-						class="
-							flex flex-col
-							items-center
-							space-y-5
-							pt-5
-							pb-3
-							text-lg
-							md:text-xl
-						"
-					>
-						<a href="" class="block text-pink-500">Home</a>
-						<a href="" class="block text-gray-400">Download</a>
-						<a href="" class="block text-gray-400">Update Log</a>
-						<a href="" class="block text-gray-400">FAQs</a>
-						<a href="" class="block text-gray-400">Contact Us</a>
-						<button class="text-gray-400">Language</button>
-						<a href="" class="block text-gold">Donate</a>
-					</div>
+						</div>
+					</button>
+					<a href="" class="block text-gold">Donate</a>
 				</div>
 			</div>
 		</nav>
@@ -337,10 +367,10 @@
 			class="
 				flex flex-col
 				items-center
-				md:items-start md:flex-row
+				lg:items-start lg:flex-row
 				justify-center
 				space-y-10
-				md:space-y-0 md:space-x-40
+				lg:space-y-0 lg:space-x-40
 				py-20
 			"
 		>
