--- a/public/index.html
+++ b/public/index.html
@@ -326,15 +326,24 @@
 					"
 				>
 					<a href="" class="block text-pink-500">Home</a>
-					<a href="" class="block text-gray-400">Download</a>
-					<a href="" class="block text-gray-400">Update Log</a>
-					<a href="" class="block text-gray-400">FAQs</a>
-					<a href="" class="block text-gray-400">Contact Us</a>
+					<a href="" class="block text-gray-600">Download</a>
+					<a href="" class="block text-gray-600">Update Log</a>
+					<a href="" class="block text-gray-600">FAQs</a>
+					<a href="" class="block text-gray-600">Contact Us</a>
 
-					<button class="text-gray-400 flex items-center space-x-1">
-						<p class="pl-3">Language</p>
+					<!-- mobile language button -->
+					<button
+						class="
+							mobile-language-button
+							text-gray-600
+							flex
+							items-center
+							space-x-1
+						"
+					>
+						<p class="pl-3">English</p>
 						<!-- icon -->
-						<div class="pt-1">
+						<div class="pt-0">
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
 								class="
@@ -357,6 +366,27 @@
 							</svg>
 						</div>
 					</button>
+					<!-- mobile language menu -->
+					<div class="mobile-language-menu hidden">
+						<div
+							class="
+								w-screen
+								bg-gray-50
+								shadow-inner
+								grid grid-cols-3
+								place-items-center
+								py-4
+								px-3
+								gap-y-5
+								text-gray-600
+							"
+						>
+							<a href="">简体中文</a><a href="">русский</a
+							><a href="">Deutsche</a><a href="">français</a
+							><a href="">繁体中文</a>
+						</div>
+					</div>
+
 					<a href="" class="block text-gold">Donate</a>
 				</div>
 			</div>
@@ -535,7 +565,7 @@
 		</footer>
 
 		<!-- js -->
-		<script src="language-button.js"></script>
-		<script src="mobile-button.js"></script>
+		<script src="./language-button.js"></script>
+		<script src="./mobile-button.js"></script>
 	</body>
 </html>
