--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 	</head>
 
 	<!-- temp height style applied -->
-	<body class="bg-gray-100 font-body" style="height: 500px">
+	<body class="bg-gray-100 dark:bg-gray-900 font-body"">
 		<!-- nav bar -->
 		<nav
 			class="
@@ -401,7 +401,10 @@
 				justify-center
 				space-y-10
 				lg:space-y-0 lg:space-x-40
-				py-20
+				py-20 md:py-36
+				h-screen
+				mt-16
+				md:mt-auto
 			"
 		>
 			<!-- text -->
@@ -492,6 +495,8 @@
 					alt="genshin-impact"
 				/>
 			</div>
+
+			
 		</div>
 
 		<!-- footer goes here -->
