--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 	</head>
 
 	<!-- temp height style applied -->
-	<body class="bg-gray-100 dark:bg-gray-900 font-body"">
+	<body class="bg-gray-100 font-body"">
 		<!-- nav bar -->
 		<nav
 			class="
