fixed image pathname

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,6 @@
 		/>
 	</head>
 
-	<!-- temp height style applied -->
 	<body class="bg-gray-100 font-body"">
 		<!-- nav bar -->
 		<nav
@@ -491,7 +490,7 @@
 			<div>
 				<img
 					class="max-w-xs md:max-w-sm rounded shadow"
-					src="./assets/screenshot-1.jpeg"
+					src="/assets/screenshot-1.jpeg"
 					alt="genshin-impact"
 				/>
 			</div>
@@ -499,7 +498,7 @@
 			
 		</div>
 
-		<!-- footer goes here -->
+		<!-- footer-->
 		<footer class="bg-white">
 			<!-- above line -->
 			<div
