fixed .js files pathnames

--- a/public/index.html
+++ b/public/index.html
@@ -403,7 +403,7 @@
 				py-20 md:py-36
 				h-screen
 				mt-16
-				md:mt-auto
+				lg:mt-auto
 			"
 		>
 			<!-- text -->
@@ -490,7 +490,7 @@
 			<div>
 				<img
 					class="max-w-xs md:max-w-sm rounded shadow"
-					src="/assets/screenshot-1.jpeg"
+					src="assets/screenshot-1.jpeg"
 					alt="genshin-impact"
 				/>
 			</div>
@@ -569,7 +569,7 @@
 		</footer>
 
 		<!-- js -->
-		<script src="./language-button.js"></script>
-		<script src="./mobile-button.js"></script>
+		<script src="language-button.js"></script>
+		<script src="mobile-button.js"></script>
 	</body>
 </html>
