--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,9 @@
             <div
                 class="flex justify-between">
                 <!-- logo -->
-                <div class="flex items-center">
-                    <a href="./" class="font-logo font-extrabold text-[25px] lg:text-[28px] bg-gradient-to-r from-pink-500 to-purple-500 text-transparent bg-clip-text">
-                        PlayCover
+                <div class="flex items-center lg:mr-10 xl:pl-10">
+                    <a href="./" class="">
+                        <img class="h-12 rounded-lg" src="assets/logo.svg" alt="">
                     </a>
                 </div>
 
@@ -161,7 +161,7 @@
 
         <!-- content -->
         <div
-            class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-40 py-20 md:py-36 h-screen mt-6 lg:mt-auto">
+            class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-40 pt-14 pb-10 lg:pt-24 lg:mt-auto">
             <!-- text -->
             <div
                 class="max-w-full flex flex-col items-center md:block">
