fixed nav bar stickiness

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <body
         class="bg-gray-100 font-montserrat" ">
         <!-- nav bar -->
-        <nav class="max-w-screen-2xl px-6 lg:pr-12 lg:pl-14 mx-auto py-3 lg:py-1 fixedw-screen top-0 bg-white filter drop-shadow-md z-20">
+        <nav class="max-w-screen-2xl px-6 lg:pr-12 lg:pl-14 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white filter drop-shadow-md z-20">
             <div
                 class="flex justify-between">
                 <!-- logo -->
@@ -161,7 +161,8 @@
 
         <!-- content -->
         <div
-            class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-40 pt-14 pb-10 lg:pt-24 lg:mt-auto">
+            class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-40 pt-28 pb-10  lg:mt-auto">
+
             <!-- text -->
             <div
                 class="max-w-full flex flex-col items-center md:block">
@@ -170,7 +171,7 @@
 
 
                 <!-- hero text -->
-                <p class="max-w-sm pt-6 md:pt-0 text-center md:text-left text-lg">an app that allows you to run iOS apps & games on M1 & Intel Mac with mouse, keyboard and controller support.</p>
+                <p class="md:pl-1 max-w-sm pt-6 md:pt-0 text-center md:text-left text-lg">an app that allows you to run iOS apps & games on M1 & Intel Mac with mouse, keyboard and controller support.</p>
 
                 <!-- Download buttons -->
                 <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 pt-4 md:pt-6">
