--- a/public/index.html
+++ b/public/index.html
@@ -209,7 +209,7 @@
                     <h3 class="text-xl p-[3px] pb-4">Links</h3>
                     <!-- icons -->
                     <div class="flex space-x-5">
-                        <a href="" class="flex flex-col group">
+                        <a href="https://github.com/Letscoder/PlayCover" target="_blank" class="flex flex-col group">
                             <img class="h-12 pl-[2px] pb-1" src="assets/github.svg" alt="github">
                             <span class="group-hover:text-yellow-500 text-sm">GitHub</span>
                         </a>
