added text next to logo

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,10 @@
                 class="flex justify-between">
                 <!-- logo -->
                 <div class="flex items-center lg:mr-10 xl:pl-10">
-                    <a href="./" class="">
-                        <img class="h-12 rounded-lg" src="assets/logo.svg" alt="">
+                    <a href="./" class="flex items-center">
+                        <img class="h-9 rounded-lg" src="assets/logo.svg" alt="">
+                        <span class="text-2xl pl-2 bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">PlayCover</span>
+
                     </a>
                 </div>
 
@@ -171,7 +173,7 @@
 
 
                 <!-- hero text -->
-                <p class="md:pl-1 max-w-sm pt-6 md:pt-0 text-center md:text-left text-lg">an app that allows you to run iOS apps & games on M1 & Intel Mac with mouse, keyboard and controller support.</p>
+                <p class="md:pl-1 max-w-xs md:max-w-sm pt-6 md:pt-0 text-center md:text-left text-lg">an app that allows you to run iOS apps & games on M1 & Intel Mac with mouse, keyboard and controller support.</p>
 
                 <!-- Download buttons -->
                 <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 pt-4 md:pt-6">
@@ -202,7 +204,7 @@
                     class="pt-6 md:pt-0 md:pl-2">
                     <!-- logo -->
                     <h1 class="pb-1 font-extrabold text-2xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">PlayCover</h1>
-                    <p class="max-w-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, temporibus! Corrupti, obcaecati. Cupiditate, dolores minus nam ea possimus, harum optio facere aperiam natus aut tenetur aspernatur. Provident iusto cupiditate pariatur eveniet, vitae modi corporis odio excepturi quasi voluptatum repellat, corrupti, eum eaque atque ullam commodi temporibus. Dolore vitae illo nisi?</p>
+                    <p class="max-w-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quisquam libero minima corrupti, ad sunt asperiores rem atque nihil quidem.</p>
                 </div>
                 <!-- links -->
                 <div class="flex justify-between items-start flex-col mt-auto md:pt-0">
