added animation in language menu

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,8 @@
                             </button>
 
                             <!-- language menu -->
-                            <div class="language-menu hidden absolute bg-white right-0 rounded-md text-[17px] px-[18px] pb-3 pt-6">
+                            <div class="language-menu absolute bg-white right-0 rounded-md text-[17px] px-[18px] pb-3 pt-6 transform transition-all duration-300 scale-0 opacity-0 -translate-y-2/4 ease-out">
+
                                 <ul class="space-y-4">
                                     <li>
                                         <a href="#" class="text-gray-700 hover:text-yellow-500 transition-colors duration-200">
