added animation in lang icon

--- a/public/index.html
+++ b/public/index.html
@@ -69,12 +69,12 @@
                         <li
                             class="relative">
                             <!-- language btn -->
-                            <button class="language-button flex items-center space-x-2 border border-gray-600 rounded-md px-3 py-1 transition-colors duration-200 group hover:border-yellow-600">
+                            <button class="language-button flex items-center space-x-1 border border-gray-600 rounded-md px-3 py-1 transition-colors duration-200 group hover:border-yellow-600">
                                 <span href="" class="text-[17px] text-gray-800 transition-colors duration-200 group-hover:text-yellow-600">
                                     English
                                 </span>
                                 <!-- icon -->
-                                <div class="pt-1">
+                                <div class="language-menu-icon transform transition-transform duration-300 group hover:animate-bounce">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition-colors duration-200 group-hover:text-yellow-600" fill="none" viewbox="0 0 24 24" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19 9l-7 7-7-7"/>
                                     </svg>
