--- a/public/index.html
+++ b/public/index.html
@@ -190,9 +190,12 @@
                 </div>
 
                 <!-- build text -->
-                <div id="latest-build-text" class="hidden overflow-hidden hover:overflow-y-auto lg:flex rounded-lg max-h-[17rem] w-[27.5rem] bg-green-200">
-                    <div class="m-6 p-3">
-                        <p>Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build</p>
+                <div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17rem] w-[27.5rem] cursor-default border-2 hover:border-transparent hover:shadow-lg hover:bg-white transition-all duration-300">
+                    <div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 group-hover:text-gray-800 transition-all duration-300 relative">
+                        <p class="font-semibold text-lg">Latest Build Info</p>
+                        <br>
+                        <p>Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build</p>
+
                     </div>
                 </div>
 
