--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,7 @@
                         <svg class="dark:hidden h-9 text-gray-700" version="1.0" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 294 305"><path d="M119.2 36c-28.1 10-52 31-65.4 57.5C45 110.8 41 127.6 41 147.1c0 43.7 24.4 83.6 63 103.3 12.8 6.6 23.4 10 37.2 12 14 2.1 23.2 2 37.4-.4 45.3-7.8 82.8-43 93.4-87.8 1.1-4.7 1-5.5-.5-7.2-2.6-2.9-4.9-2.5-11.3 1.9-8.1 5.4-16.4 9.4-26.2 12.6-7 2.3-10.9 2.8-22.1 3.3-21.9.7-37.4-3.4-54.6-14.8-40.4-26.6-53.5-79.3-30.2-121.7 4.3-8 4.9-11.7 2-13.3-2.6-1.3-3.6-1.2-9.9 1z" fill="#374151"/></svg>
 
                         <!-- light icon -->
-                        <img class="hidden dark:inline h-8" src="assets/sun-3.svg" alt="">
+                        <img class="hidden dark:inline h-8" src="assets/sun.svg" alt="">
                     </button>
                 </div>
 
